# elektron-rs

./: .gitignore  .readthedocs.yaml  Cargo.toml  MANIFEST.in  Makefile  README.md  build.rs  pyproject.toml  requirements.txt  setup.cfg  setup.py  wrapper.h
.github/workflows/: CI.yml  build.yml  doc.yml  rust-clippy.yml  test.yml
benches/: plotter_benchmark.rs
docs/: conf.py  index.rst  installation.rst  notebook.rst  python.rst  simulation.rst
elektron/: __init__.py  __main__.py
elektron_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
files/: 4007_vca.kicad_sch  4069.cir  4069.kicad_sch  dco.kicad_sch  empty.kicad_pcb  empty.kicad_prl  empty.kicad_pro  header.kicad_sch  jfet.kicad_sch  low_pass_filter.kicad_sch  low_pass_filter_unconnected.kicad_sch  panel.kicad_pcb  pinpos.kicad_sch  produkt.kicad_sch  summe.kicad_pcb  summe_min.kicad_sch  svf.cir  svf.kicad_sch
files/empty/: empty-B_Cu.gbr  empty-B_Mask.gbr  empty-B_Paste.gbr  empty-B_Silkscreen.gbr  empty-Edge_Cuts.gbr  empty-F_Cu.gbr  empty-F_Mask.gbr  empty-F_Paste.gbr  empty-F_Silkscreen.gbr  empty-job.gbrjob
files/multipage/: multipage.kicad_prl  subsheet.kicad_sch
files/other_symbols/: elektrophon.kicad_sym
files/summe/: summe.kicad_prl  summe.kicad_pro  summe.kicad_sch  summe_unconnected.kicad_sch
python/elektron/: __init__.py  __main__.py  draw.py
samples/: 4069.py  draw.py  lllama.py
samples/files/multipage/: multipage.kicad_prl  multipage.kicad_pro  multipage.kicad_sch  subsheet.kicad_sch
samples/files/spice/: Potentiometer.cir
samples/files/summe/: summe.kicad_pro
samples/files/symbols/: Amplifier_Operational.kicad_sym
samples/notebook/: Makefile  config.yaml  module.mk  module_python.mk  requirements.txt  svf.kicad_sch  svf.kicad_sch.orig
samples/notebook/2022-15-11-cp3/: __init__.py  index.rmd
samples/notebook/2022-15-11-cp3/main/: fp-info-cache  main.kicad_sch
samples/notebook/2022-15-11-cp3/panel/: panel.kicad_pcb
samples/notebook/content/: article.mk
samples/notebook/layouts/shortcodes/: audio.html  bom.html  d3.html  error.html  figure.html  figure.html.old  javascript.html  result.html  status.html  table.html
src/: cairo_plotter.rs  circuit.rs  draw.rs  error.rs  lib.rs  libraries.rs  main.rs  netlist.rs  ngspice.rs  plot.rs  reports.rs  schema.rs  sexp.rs  sexp_write.rs  shape.rs  themes.rs  utils.rs
src/circuit/: circuit.rs  mod.rs  netlist.rs
src/cli/src/: error.rs  lib.rs  main.rs
src/cli/src/python/: circuit.rs  (+2 more)
src/cli/tests/: tests.rs
src/docs/: about.rst  audio.rst  cli.rst  conf.py  d3.rst  draw.rst  elektron.rst  index.rst  installation.rst  latex.rst  notebook.rst  python.rst  snippets.py
src/docs/_static/: custom.css
src/draw/: Cargo.toml  mod.rs  model.rs
src/draw/src/: error.rs  lib.rs  model.rs
src/elektron/: __init__.py
src/gerber/: color4d.rs  gerber_metadata.rs  gerber_netlist_metadata.rs  gerber_plotter.rs  mod.rs  pcb_render_settings.rs  plot_board_layers.rs  plot_items.rs  plot_params.rs  plotter.rs  render_settings.rs
src/ngspice/: Cargo.toml  README.md  build.rs
src/ngspice/src/: lib.rs  simulation.rs
src/notebook/: Cargo.toml  figure.rs  mod.rs  parser.rs  rule.pest  runner.rs  utils.rs
src/notebook/cells/: mod.rs
src/notebook/cells/audio/: mod.rs
src/notebook/cells/circuit/: mod.rs
src/notebook/cells/d3/: mod.rs
src/notebook/cells/elektron/: mod.rs
src/notebook/cells/latex/: mod.rs
src/notebook/cells/plot/: mod.rs
src/notebook/cells/python/: mod.rs
src/notebook/src/: error.rs  lib.rs  notebook.rs  parser.rs  plot.rs  runner.rs  utils.rs
src/notebook/src/cells/: audio.rs  circuit.rs  content.rs  d3.rs  elektron.rs  figure.rs  javascript.rs  latex.rs  mod.rs  plot.rs  python.rs
src/notebook/src/cells/audio/: mod.rs
src/notebook/src/cells/circuit/: mod.rs
src/notebook/src/cells/d3/: README.md  mod.rs
src/notebook/src/cells/elektron/: mod.rs
src/notebook/src/cells/figure/: mod.rs
src/notebook/src/cells/javascript/: mod.rs
src/notebook/src/cells/latex/: mod.rs
src/notebook/src/cells/plot/: mod.rs
src/notebook/src/cells/python/: mod.rs
src/plot/: border.rs  cairo_plotter.rs  gerber.rs  gerber_plotter.rs  mod.rs  pcb.rs  plotter.rs  schema.rs  svg_plotter.rs  theme.rs
src/plot/css/: behave-dark.css  black-white.css  blue-tone.css  blue-tone.json  css.template  eagle-dark.css  generate.py  kicad_2020.css  nord.css  solarized-dark.css  solarized-light.css  wdark.css  wlight.css
src/plotter/: Cargo.toml
src/plotter/src/: cairo_plotter.rs  error.rs  gerber.rs  kicad_schema.rs  lib.rs  pathfinder_plotter.rs  pcb.rs  plotter.rs  schema.rs  svg.rs  svg_plotter.rs  themer.rs  transform.rs  vrml.rs
src/plotter/src/css/: behave-dark.css  black-white.css  blue-green-dark.json  blue-tone.css  css.template  eagle-dark.css  generate.py  kicad_2020.css  mono.css  nord.css  solarized-dark.css  solarized-light.css  wdark.css  wlight.css
src/plotter/src/theme/: mod.rs
src/plotter/tests/: dco.kicad_sch  hall.kicad_sch  jfet.kicad_sch  tests.rs
src/plotter/tests/all_elements/: all_elements.kicad_prl  all_elements.kicad_pro  all_elements.kicad_sch  sheet.kicad_sch  ~all_elements.kicad_sch.lck
src/python/: circuit.rs  mod.rs  model.rs
src/reports/: Cargo.toml  bom.rs  drc.rs  erc.rs  mod.rs  mouser.rs
src/reports/src/: bom.rs  drc.rs  erc.rs  error.rs  lib.rs  mouser.rs
src/reports/tests/: 3280.kicad_sch  partlist.yaml  summe.kicad_sch  tests.rs
src/sexp/: Cargo.toml  del.rs  elements.rs  get.rs  iterator.rs  library.rs  math_utils.rs  mod.rs  model.rs  parser.rs  pcb.rs  schema.rs  set.rs  shape.rs  shape_poly_set.rs  test.rs  transform.rs  write.rs
src/sexp/src/: error.rs  lib.rs  math.rs  schema.rs
src/sexp/tests/: opamp.kicad_sch  pinpos_2.kicad_sch  test.rs
src/sexp_macro/: Cargo.toml
src/sexp_macro/src/: lib.rs
src/sexp_macro/tests/: test.rs
src/simulation/: Cargo.toml
src/simulation/src/: circuit.rs  error.rs  lib.rs  netlist.rs  simulation.rs
src/simulation/tests/: summe1.kicad_sch  tests.rs
src/spice/: circuit.rs  mod.rs  netlist.rs  simulation.rs
(+109 files in other folders)
