[package]
name = "elektron_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/simulation",
    "src/reports",
    "src/plotter",
    "src/draw",
    "src/notebook",
    "src/sexp",
    "src/sexp_macro",
    "src/ngspice",
]

[lib]
name = "elektron"
path = "src/cli/src/lib.rs"
crate-type = ["cdylib"]

[profile.release-lto]
inherits = "release"
lto = true

[dependencies]
sexp = { path = "src/sexp" }
sexp_macro = { path = "src/sexp_macro" }
simulation = { path = "src/simulation" }
reports = { path = "src/reports" }
plotter = { path = "src/plotter" }
draw = { path = "src/draw"}
notebook = { path = "src/notebook" }
elektron_ngspice = { path = "src/ngspice" }

pyo3 = { version = "0.20" }
thiserror = "1.0"
ndarray = "0.15"
itertools = "0.11"
rand = "0.8"
json = "0.12"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
viuer = "0.7"
rust-fuzzy-search = "0.1.1"
tempfile = "3"
colored = "2"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
pyo3-build-config = "0.20"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
