[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
[project]
name = "elektron"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["matplotlib", "matplotlib-backend-kitty", "numpy", "pynvim", "ipython"]


[project.scripts]
elektron = "elektron.__main__:main"
