[package]
name = "draw"
version = "0.2.0"
edition = "2021"

[lib]
name = "draw"

[dependencies]
sexp = { path = "../sexp" }
sexp_macro = { path = "../sexp_macro" }
reports = { path = "../reports" }
thiserror = "1.0"
lazy_static = "1.4.0"
regex = "1.10"
ndarray = "0.15"
pyo3 = { version = "0.20" }

[dependencies.uuid]
version = "1.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] 
