[package]
name = "draw"
version.workspace = true
edition.workspace = true 
license.workspace = true

[lib]
name = "draw"

[dependencies]
sexp = { path = "../sexp" }
sexp_macro = { path = "../sexp_macro" }
reports = { path = "../reports" }

thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true
ndarray.workspace = true
pyo3.workspace = true 
uuid.workspace = true
