[package]
name = "elektron_ngspice"
version = "0.1.4"
edition = "2021"
description = "ngspice bindings for elektron"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spielhuus/elektron_ngspice"

[lib]
name = "elektron_ngspice"

[dependencies]
libloading = "0.7.3"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.61.0"
