[package]
name = "notebook"
version.workspace = true
edition.workspace = true 
license.workspace = true

[lib]
name = "notebook"

[dependencies]
sexp_macro = { path = "../sexp_macro" }
sexp = { path = "../sexp" }
reports = { path = "../reports" }
simulation = { path = "../simulation" }
plotter = { path = "../plotter" }

thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true
pyo3.workspace = true
itertools.workspace = true
ndarray.workspace = true
yaml-rust.workspace = true
xlsxwriter.workspace = true
colored.workspace = true
rand.workspace = true
json.workspace = true
pest.workspace = true
pest_derive.workspace = true
tectonic.workspace = true
anyhow.workspace = true
plotters.workspace = true
plotters-svg.workspace = true
hound.workspace = true
cairo-rs.workspace = true
png.workspace = true
svg.workspace = true
pdf.workspace = true
poppler-rs.workspace = true
