[package]
name = "notebook"
version.workspace = true
edition.workspace = true 
license.workspace = true

[lib]
name = "notebook"

[dependencies]
plotter = { path = "../plotter" }
reports = { path = "../reports" }
sexp = { path = "../sexp" }
sexp_macro = { path = "../sexp_macro" }
simulation = { path = "../simulation" }

anyhow.workspace = true
cairo-rs.workspace = true
hound.workspace = true
json.workspace = true
lazy_static.workspace = true
log.workspace = true
plotters.workspace = true
poppler-rs.workspace = true
pyo3.workspace = true
rand.workspace = true
regex.workspace = true
tectonic.workspace = true
colored.workspace = true
