[package]
name = "plotter"
version = "0.2.0"
edition = "2021"

[lib]
name = "plotter"

[dependencies]
sexp = { path = "../sexp" }
sexp_macro = { path = "../sexp_macro" }
simulation = { path = "../simulation" }

log.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true
ndarray.workspace = true
indexmap.workspace = true
itertools.workspace = true
pyo3.workspace = true
rand.workspace = true

font-kit.workspace = true
pathfinder_geometry.workspace = true

pangocairo = "0.18"
cairo-rs = { version = "0.18", features = ["svg", "png", "pdf"] }
png = "0.17"
svg = "0.14"
pdf = "0.8"
simplecss = "0.2"
