[package]
name = "plotter"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "plotter"

[dependencies]
sexp = { path = "../sexp" }
sexp_macro = { path = "../sexp_macro" }
simulation = { path = "../simulation" }

log.workspace = true
nalgebra.workspace = true
lazy_static.workspace = true
regex.workspace = true
ndarray.workspace = true
indexmap.workspace = true
itertools.workspace = true
pyo3.workspace = true
rand.workspace = true
rust-fontconfig.workspace = true
fontdue.workspace = true
simplecss.workspace = true
clap.workspace = true

#pathfinder_geometry.workspace = true

pangocairo.workspace = true
cairo-rs.workspace = true
png.workspace = true
svg.workspace = true
pdf.workspace = true



pathfinder_geometry.workspace = true
pathfinder_content.workspace = true
pathfinder_color.workspace = true
pathfinder_renderer.workspace = true
pathfinder_export.workspace = true
