[package]
name = "sexp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sexp"

[dependencies]
sexp_macro = { path = "../sexp_macro" }

thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true
ndarray.workspace = true
log.workspace = true
itertools.workspace = true

pathfinder_geometry.workspace = true
