[package]
name = "simulation"
version = "0.2.0"
edition = "2021"

[lib]
name = "simulation"

[dependencies]
elektron_ngspice = { path = "../ngspice" }
sexp_macro = { path = "../sexp_macro" }
sexp = { path = "../sexp" }
thiserror = "1.0"
lazy_static = "1.4.0"
regex = "1.10"
indexmap = "2"
ndarray = "0.15"
# colored = "2"

# [dependencies.uuid]
# version = "1.4"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ] 
