[package]
name = "simulation"
version.workspace = true
edition = "2021"

[lib]
name = "simulation"

[dependencies]
ngspice = { path = "../ngspice" }
sexp_macro = { path = "../sexp_macro" }
sexp = { path = "../sexp" }

thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true
ndarray.workspace = true
log.workspace = true
indexmap.workspace = true
